Change trigger from pull_request to push for CI

--- a/.github/workflows/gradle-build-and-release.yml
+++ b/.github/workflows/gradle-build-and-release.yml
@@ -1,9 +1,9 @@
 name: Gradle Build and Release Cache
 
 on:
-  pull_request:
-    types:
-      - closed
+  push:
+    branches:
+      - "**"
 
 permissions:
   contents: write
