--- a/.github/workflows/gradle-build-and-release.yml
+++ b/.github/workflows/gradle-build-and-release.yml
@@ -1,9 +1,7 @@
 name: Gradle Build and Release Cache
 
 on:
-  push:
-    branches:
-      - "**"
+  workflow_dispatch:
 
 permissions:
   contents: write
@@ -16,12 +14,10 @@ jobs:
       GRADLE_USER_HOME: ${{ github.workspace }}/.gradle-cache
 
     steps:
-      - name: Checkout source (merge commit)
+      - name: Checkout source
         uses: actions/checkout@v4
-        with:
-          ref: ${{ github.event.pull_request.merge_commit_sha }}
 
-      - name: Set up JDK
+      - name: Set up JDK 21
         uses: actions/setup-java@v4
         with:
           distribution: temurin
@@ -35,14 +31,15 @@ jobs:
 
       - name: Package Gradle cache
         run: |
-          zip -r gradle-cache.zip "$GRADLE_USER_HOME"
+          cd "$GRADLE_USER_HOME"
+          zip -r "${{ github.workspace }}/gradle-cache.zip" .
 
       - name: Create draft release and upload cache
         uses: softprops/action-gh-release@v2
         with:
           draft: true
-          tag_name: cache-pr-${{ github.event.pull_request.number }}
-          name: Gradle Cache (PR #${{ github.event.pull_request.number }})
+          tag_name: cache-${{ github.run_id }}
+          name: Gradle Cache (run ${{ github.run_id }})
           files: gradle-cache.zip
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
